# slam

./: .dockerignore  .gitignore  .gitmodules  BUILDING.md  INSTALL.md  README.md  TODO.txt  agents.md  calib.npz  cvx_utils.py  demo.mov  hatch_build.py  license.md  pixi.toml  pyproject.toml  stereo_calibrate.py  test.ipynb  todo.txt  util.py  viz.py
.ipynb_checkpoints/: test-checkpoint.ipynb
backend/: pose_graph.py  proximity_loop_detector.py
cpp/: CMakeLists.txt  klt_tracker_cpp.cpp  rs_sdk.cpp  stereo_matching.cpp
depth/: light_ess.py  sgbm.py
docker/: Dockerfile.jetson  Dockerfile.ubuntu-arm64
registration/: lighterglue.py  lightglue.py  orb.py  registration.py  utils.py
slam/: __init__.py  alignment.py  camera_utils.py  cli.py  cvx_utils.py  frontend.py  hydra_utils.py  logger.py  loop_closure.py  matcher_factory.py  metrics.py  system.py  vision_odometry.py  viz.py
slam/depth/: __init__.py  sgbm.py
slam/local_vo/: __init__.py  bundle_adjustment.py  feature_utils.py  klt_tracker.py  relative_pose.py
slam/registration/: __init__.py  utils.py
slam/vio/: __init__.py  bundle_adjustment.py  config.py  core.py  d435i.py  feature_utils.py  imu_preintegration.py  io.py  klt_tracker.py  mp_runner.py  relative_pose.py  relocalization.py  types.py
tests/: checkerboard_from_rosbag.py  klt.py  ktti_slam.py  live_slam.py  local_rgbd_icp.py  local_vo_bundle_adjustment.py  realsense_bag_writer.py  realsense_estimate_gravity.py  realsense_gt_pose.py  rect.py  sequence_pose_error_analysis.py  setup.py  slam.py  ta_slam.py  test_utils.py  two_view_pose_error_analysis.py  two_view_pose_estimation.py  vio_eval_euroc.py  vio_example.py  vio_example_d435i.py  vio_example_euroc.py  vio_example_realsense.py  vio_example_ros.py  vio_example_ros_bag.py  vio_example_ros_node.py
tests/config/: checkerboard.yaml  euroc_pipeline.yaml  klt.yaml  local_vo.yaml  tartanair.yaml  vio.yaml  vio_config.yaml  vio_d435i.yaml  vio_euroc.yaml
tests/config/euroc/: MH_01_easy.yaml  VI_01_easy.yaml  VI_02_medium.yaml  VI_03_difficult.yaml  vio.yaml
tests/config/euroc/experiments/reproj_gating/: no_reproj_gating.yaml  reproj_gating.yaml  reproj_gating_median_filter.yaml  reproj_gating_no_light_priors_median_filter.yaml  reproj_gating_no_max_rejection.yaml  reproj_gating_tuned_gftt.yaml  reproj_gating_tuned_gftt_no_max_rejection.yaml
tests/datasets/: __init__.py  depth_estimators.py  loaders.py  pipeline.py  rectifiers.py
tests/results/: klt_local_vo_bundle_adjustment.npz  klt_local_vo_tracking.npz  relative_pose_errors.npz  sequence_pose_errors.npz
tests/utils/: test_data.py
vio/: d435i_client.py  d435i_server.py
