[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slam"
dynamic = ["version"]
description = "Lightweight visual-inertial odometry stack for CoreVisionX."
authors = [{ name = "Jacob Van Meter", email = "jacobvm04@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "hydra-core>=1.3.2,<2",
  "gtsam-develop>=4.3a0.dev202510200041,<5",
  "opencv-python-headless>=4,<5",
  "rerun-sdk>=0.27,<0.28",
  "line-profiler>=5.0.0, <6",
  "pydantic>=2.12.5,<3",
  "eclipse-zenoh>=1.7.0,<2",
]

[tool.hatch.build]
packages = ["slam", "vio"]
exclude = ["tests/**"]

[tool.hatch.build.targets.wheel]
artifacts = ["slam/vio/*.so"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/**"]

[tool.hatch.version]
path = "slam/__init__.py"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.hooks.custom]
